# routes/api.php
@@ -81,7 +81,7 @@ Route::group(['middleware' => 'role:admin'], function() {
 
 Route::group(['middleware' => 'role:driver'], function() {
     //Drive a bus to the next route point
-    Route::get('/buses/{bus}/drive', 'BusController@drive');
+    Route::get('/buses/{id}/drive', 'BusController@drive');
 
 });
 
